Corrijo soluciones de la practica 6 de PyE

--- a/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 6.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/Practica 6.lyx
@@ -3296,7 +3296,7 @@ Demanda diaria del articulo
 \begin_inset Quotes fld
 \end_inset
 
-Demanda en el dia 
+Demanda en el día 
 \begin_inset Formula $i$
 \end_inset
 
@@ -3315,8 +3315,8 @@ Demanda en el dia
 \end_layout
 
 \begin_layout Itemize
-Suponemos que las demandas en un dia son independientes de las demandas
- en el resto de los dias.
+Suponemos que las demandas en un día son independientes de las demandas
+ en el resto de los días.
 \end_layout
 
 \begin_layout Itemize
@@ -3363,11 +3363,11 @@ Por el teorema central del limite,
 \end_layout
 
 \begin_layout Itemize
-Por lo tanto aproximamos la distribucion 
+Por lo tanto aproximamos la distribución 
 \begin_inset Formula $D_{T}$
 \end_inset
 
- por una distribucion 
+ por una distribución 
 \begin_inset Formula $N\left(90,45\right)$
 \end_inset
 
